practice deep learning

--- a/Logistic Regression Vs. a Basic Neural Network.ipynb
+++ b/Logistic Regression Vs. a Basic Neural Network.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a4dfad64",
+   "id": "3f692891",
    "metadata": {},
    "outputs": [
     {
@@ -140,8 +140,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "a2f4871e",
+   "execution_count": 4,
+   "id": "6a81aeba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,28 +155,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "cdc36681",
+   "execution_count": 5,
+   "id": "874773c0",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'skl' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-ee607e471bc2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Create scaler instance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mX_scaler\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mskl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpreprocessing\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mStandardScaler\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Fit the scaler\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mX_scaler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'skl' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Create scaler instance\n",
-    "X_scaler = skl.preprocessing.StandardScaler()\n",
+    "# Preprocess numerical data for neural network\n",
     "\n",
-    "# Fit the scaler\n",
-    "X_scaler.fit(X_train)\n",
+    "# Create a StandardScaler instance\n",
+    "scaler = StandardScaler()\n",
+    "\n",
+    "# Fit the StandardScaler\n",
+    "X_scaler = scaler.fit(X_train)\n",
     "\n",
     "# Scale the data\n",
     "X_train_scaled = X_scaler.transform(X_train)\n",
@@ -185,10 +175,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "95e9f2b9",
+   "execution_count": 6,
+   "id": "b4771e1e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Logistic regression model accuracy: 0.729\n"
+     ]
+    }
+   ],
    "source": [
     "# Define the logistic regression model\n",
     "log_classifier = LogisticRegression(solver=\"lbfgs\",max_iter=200)\n",
@@ -203,10 +201,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "41707d9a",
+   "execution_count": 7,
+   "id": "81e88bab",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/50\n",
+      "18/18 [==============================] - 0s 736us/step - loss: 0.8652 - accuracy: 0.3698\n",
+      "Epoch 2/50\n",
+      "18/18 [==============================] - 0s 617us/step - loss: 0.8001 - accuracy: 0.4253\n",
+      "Epoch 3/50\n",
+      "18/18 [==============================] - 0s 700us/step - loss: 0.7471 - accuracy: 0.4983\n",
+      "Epoch 4/50\n",
+      "18/18 [==============================] - 0s 682us/step - loss: 0.7031 - accuracy: 0.5677\n",
+      "Epoch 5/50\n",
+      "18/18 [==============================] - 0s 735us/step - loss: 0.6680 - accuracy: 0.6181\n",
+      "Epoch 6/50\n",
+      "18/18 [==============================] - 0s 713us/step - loss: 0.6386 - accuracy: 0.6632\n",
+      "Epoch 7/50\n",
+      "18/18 [==============================] - 0s 708us/step - loss: 0.6137 - accuracy: 0.6944\n",
+      "Epoch 8/50\n",
+      "18/18 [==============================] - 0s 672us/step - loss: 0.5939 - accuracy: 0.7118\n",
+      "Epoch 9/50\n",
+      "18/18 [==============================] - 0s 649us/step - loss: 0.5768 - accuracy: 0.7274\n",
+      "Epoch 10/50\n",
+      "18/18 [==============================] - 0s 775us/step - loss: 0.5620 - accuracy: 0.7396\n",
+      "Epoch 11/50\n",
+      "18/18 [==============================] - 0s 674us/step - loss: 0.5495 - accuracy: 0.7465\n",
+      "Epoch 12/50\n",
+      "18/18 [==============================] - 0s 682us/step - loss: 0.5385 - accuracy: 0.7500\n",
+      "Epoch 13/50\n",
+      "18/18 [==============================] - 0s 698us/step - loss: 0.5290 - accuracy: 0.7535\n",
+      "Epoch 14/50\n",
+      "18/18 [==============================] - 0s 682us/step - loss: 0.5209 - accuracy: 0.7587\n",
+      "Epoch 15/50\n",
+      "18/18 [==============================] - 0s 696us/step - loss: 0.5128 - accuracy: 0.7622\n",
+      "Epoch 16/50\n",
+      "18/18 [==============================] - 0s 696us/step - loss: 0.5062 - accuracy: 0.7656\n",
+      "Epoch 17/50\n",
+      "18/18 [==============================] - 0s 678us/step - loss: 0.5003 - accuracy: 0.7743\n",
+      "Epoch 18/50\n",
+      "18/18 [==============================] - 0s 711us/step - loss: 0.4948 - accuracy: 0.7760\n",
+      "Epoch 19/50\n",
+      "18/18 [==============================] - 0s 725us/step - loss: 0.4900 - accuracy: 0.7708\n",
+      "Epoch 20/50\n",
+      "18/18 [==============================] - 0s 742us/step - loss: 0.4854 - accuracy: 0.7743\n",
+      "Epoch 21/50\n",
+      "18/18 [==============================] - 0s 752us/step - loss: 0.4816 - accuracy: 0.7795\n",
+      "Epoch 22/50\n",
+      "18/18 [==============================] - 0s 767us/step - loss: 0.4776 - accuracy: 0.7812\n",
+      "Epoch 23/50\n",
+      "18/18 [==============================] - 0s 704us/step - loss: 0.4743 - accuracy: 0.7865\n",
+      "Epoch 24/50\n",
+      "18/18 [==============================] - 0s 843us/step - loss: 0.4713 - accuracy: 0.7847\n",
+      "Epoch 25/50\n",
+      "18/18 [==============================] - 0s 809us/step - loss: 0.4685 - accuracy: 0.7847\n",
+      "Epoch 26/50\n",
+      "18/18 [==============================] - 0s 932us/step - loss: 0.4662 - accuracy: 0.7847\n",
+      "Epoch 27/50\n",
+      "18/18 [==============================] - 0s 724us/step - loss: 0.4639 - accuracy: 0.7882\n",
+      "Epoch 28/50\n",
+      "18/18 [==============================] - 0s 683us/step - loss: 0.4620 - accuracy: 0.7865\n",
+      "Epoch 29/50\n",
+      "18/18 [==============================] - 0s 689us/step - loss: 0.4600 - accuracy: 0.7882\n",
+      "Epoch 30/50\n",
+      "18/18 [==============================] - 0s 708us/step - loss: 0.4582 - accuracy: 0.7934\n",
+      "Epoch 31/50\n",
+      "18/18 [==============================] - 0s 679us/step - loss: 0.4566 - accuracy: 0.7917\n",
+      "Epoch 32/50\n",
+      "18/18 [==============================] - 0s 651us/step - loss: 0.4553 - accuracy: 0.7917\n",
+      "Epoch 33/50\n",
+      "18/18 [==============================] - 0s 608us/step - loss: 0.4542 - accuracy: 0.7917\n",
+      "Epoch 34/50\n",
+      "18/18 [==============================] - 0s 621us/step - loss: 0.4526 - accuracy: 0.7917\n",
+      "Epoch 35/50\n",
+      "18/18 [==============================] - 0s 702us/step - loss: 0.4516 - accuracy: 0.7969\n",
+      "Epoch 36/50\n",
+      "18/18 [==============================] - 0s 704us/step - loss: 0.4502 - accuracy: 0.7986\n",
+      "Epoch 37/50\n",
+      "18/18 [==============================] - 0s 660us/step - loss: 0.4493 - accuracy: 0.7951\n",
+      "Epoch 38/50\n",
+      "18/18 [==============================] - 0s 739us/step - loss: 0.4484 - accuracy: 0.7951\n",
+      "Epoch 39/50\n",
+      "18/18 [==============================] - 0s 633us/step - loss: 0.4474 - accuracy: 0.7969\n",
+      "Epoch 40/50\n",
+      "18/18 [==============================] - 0s 572us/step - loss: 0.4466 - accuracy: 0.8003\n",
+      "Epoch 41/50\n",
+      "18/18 [==============================] - 0s 597us/step - loss: 0.4457 - accuracy: 0.8003\n",
+      "Epoch 42/50\n",
+      "18/18 [==============================] - 0s 567us/step - loss: 0.4447 - accuracy: 0.7986\n",
+      "Epoch 43/50\n",
+      "18/18 [==============================] - 0s 634us/step - loss: 0.4439 - accuracy: 0.8003\n",
+      "Epoch 44/50\n",
+      "18/18 [==============================] - 0s 569us/step - loss: 0.4433 - accuracy: 0.7986\n",
+      "Epoch 45/50\n",
+      "18/18 [==============================] - 0s 602us/step - loss: 0.4427 - accuracy: 0.7986\n",
+      "Epoch 46/50\n",
+      "18/18 [==============================] - 0s 582us/step - loss: 0.4423 - accuracy: 0.7951\n",
+      "Epoch 47/50\n",
+      "18/18 [==============================] - 0s 576us/step - loss: 0.4414 - accuracy: 0.7917\n",
+      "Epoch 48/50\n",
+      "18/18 [==============================] - 0s 571us/step - loss: 0.4409 - accuracy: 0.7899\n",
+      "Epoch 49/50\n",
+      "18/18 [==============================] - 0s 575us/step - loss: 0.4400 - accuracy: 0.7934\n",
+      "Epoch 50/50\n",
+      "18/18 [==============================] - 0s 594us/step - loss: 0.4396 - accuracy: 0.7917\n",
+      "6/6 - 0s - loss: 0.4850 - accuracy: 0.7344\n",
+      "Loss: 0.48495474457740784, Accuracy: 0.734375\n"
+     ]
+    }
+   ],
    "source": [
     "# Define the basic neural network model\n",
     "nn_model = tf.keras.models.Sequential()\n",
@@ -227,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52c57bcd",
+   "id": "4321487d",
    "metadata": {},
    "outputs": [],
    "source": []
